[package]
name = "iracing-api"
version = "0.0.1"
description = "iRacing Data API library"
edition = "2021"
authors = ["Richard Bradfield <bradfier@fstab.me>"]
license = "AGPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64ct = { version = "1", features = ["alloc"] }
reqwest = { version = "0.11.13", features = ["json", "cookies", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
sha2 = "0.10.6"
url = { version = "2.3.1", features = ["serde"] }
thiserror = "1"
rpassword = "7.2.0"
time = { version = "0.3.28", features = ["serde-human-readable"]}

[dev-dependencies]
tokio = { version = "1.24.1", features = ["rt", "macros"] }
